// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentDisplay tests for Assembly should render ContentDisplay component 1`] = `
<Fragment>
  <Level>
    <LevelItem>
      <Title
        headingLevel="h1"
        size="xl"
      />
    </LevelItem>
    <LevelItem />
  </Level>
  <Level>
    <LevelItem>
      <TextContent>
        <Text
          component="small"
        >
          Module
        </Text>
      </TextContent>
    </LevelItem>
    <LevelItem />
  </Level>
  <Level>
    <LevelItem>
      <TextContent>
        <Text
          component="pre"
        >
          y/test
        </Text>
      </TextContent>
    </LevelItem>
    <LevelItem />
    <LevelItem />
    <LevelItem>
      <span>
         
      </span>
    </LevelItem>
  </Level>
  <br />
  <Level>
    <LevelItem>
      <TextContent>
        <Text>
          <strong>
            <span
              id="span-source-type-product"
            >
              Product
            </span>
          </strong>
        </Text>
      </TextContent>
    </LevelItem>
    <LevelItem />
    <LevelItem>
      <TextContent>
        <Text>
          <strong>
            <span
              id="span-source-name-module-type"
            >
              Module type
            </span>
          </strong>
        </Text>
      </TextContent>
    </LevelItem>
    <LevelItem>
      <TextContent>
        <Text>
          <strong>
            <span
              id="span-source-type-draft-uploaded"
            >
              Draft uploaded
            </span>
          </strong>
        </Text>
      </TextContent>
    </LevelItem>
    <LevelItem>
      <TextContent>
        <Text>
          <strong>
            <span
              id="span-source-type-published"
            >
              Published
            </span>
          </strong>
        </Text>
      </TextContent>
    </LevelItem>
  </Level>
  <Level>
    <LevelItem>
      <TextContent>
        <Text>
          <span>
             
          </span>
        </Text>
      </TextContent>
    </LevelItem>
    <LevelItem />
    <LevelItem>
      <TextContent>
        <Text>
          <span />
        </Text>
      </TextContent>
    </LevelItem>
    <LevelItem>
      <TextContent>
        <Text>
          <span>
            --
          </span>
        </Text>
      </TextContent>
    </LevelItem>
    <LevelItem>
      <TextContent>
        <Text>
          <span>
            --
          </span>
        </Text>
      </TextContent>
    </LevelItem>
  </Level>
  <br />
  <Level>
    <LevelItem />
    <LevelItem />
    <LevelItem>
      <Button
        onClick={[Function]}
        variant="secondary"
      >
        Generate Draft Html
      </Button>
        
    </LevelItem>
  </Level>
  <br />
  <Divider />
  <br />
  <Card>
    <Versions
      assemblies={Array []}
      attributesFilePath=""
      contentType="module"
      modulePath=""
      onGetProduct={[Function]}
      onGetUrl={[Function]}
      onGetVersion={[Function]}
      productInfo=""
      updateDate={[Function]}
      variant="DEFAULT"
      variantUUID=""
      versionModulePath=""
    />
  </Card>
</Fragment>
`;

exports[`ContentDisplay tests for Assembly test componentDidMount function 1`] = `undefined`;

exports[`ContentDisplay tests for Assembly test fetchModuleDetails function 1`] = `Promise {}`;

exports[`ContentDisplay tests for Assembly test getPortalUrl function 1`] = `undefined`;

exports[`ContentDisplay tests for Assembly test getProductInitialLoad function 1`] = `undefined`;

exports[`ContentDisplay tests for Assembly test getVersionUUID function 1`] = `undefined`;

exports[`ContentDisplay tests for Module should render ModuleDisplay component 1`] = `
<Fragment>
  <Level>
    <LevelItem>
      <Title
        headingLevel="h1"
        size="xl"
      />
    </LevelItem>
    <LevelItem />
  </Level>
  <Level>
    <LevelItem>
      <TextContent>
        <Text
          component="small"
        >
          Module
        </Text>
      </TextContent>
    </LevelItem>
    <LevelItem />
  </Level>
  <Level>
    <LevelItem>
      <TextContent>
        <Text
          component="pre"
        >
          test
        </Text>
      </TextContent>
    </LevelItem>
    <LevelItem />
    <LevelItem />
    <LevelItem>
      <span>
         
      </span>
    </LevelItem>
  </Level>
  <br />
  <Level>
    <LevelItem>
      <TextContent>
        <Text>
          <strong>
            <span
              id="span-source-type-product"
            >
              Product
            </span>
          </strong>
        </Text>
      </TextContent>
    </LevelItem>
    <LevelItem />
    <LevelItem>
      <TextContent>
        <Text>
          <strong>
            <span
              id="span-source-name-module-type"
            >
              Module type
            </span>
          </strong>
        </Text>
      </TextContent>
    </LevelItem>
    <LevelItem>
      <TextContent>
        <Text>
          <strong>
            <span
              id="span-source-type-draft-uploaded"
            >
              Draft uploaded
            </span>
          </strong>
        </Text>
      </TextContent>
    </LevelItem>
    <LevelItem>
      <TextContent>
        <Text>
          <strong>
            <span
              id="span-source-type-published"
            >
              Published
            </span>
          </strong>
        </Text>
      </TextContent>
    </LevelItem>
  </Level>
  <Level>
    <LevelItem>
      <TextContent>
        <Text>
          <span>
             
          </span>
        </Text>
      </TextContent>
    </LevelItem>
    <LevelItem />
    <LevelItem>
      <TextContent>
        <Text>
          <span />
        </Text>
      </TextContent>
    </LevelItem>
    <LevelItem>
      <TextContent>
        <Text>
          <span>
            --
          </span>
        </Text>
      </TextContent>
    </LevelItem>
    <LevelItem>
      <TextContent>
        <Text>
          <span>
            --
          </span>
        </Text>
      </TextContent>
    </LevelItem>
  </Level>
  <br />
  <Level>
    <LevelItem />
    <LevelItem />
    <LevelItem>
      <Button
        onClick={[Function]}
        variant="secondary"
      >
        Generate Draft Html
      </Button>
        
    </LevelItem>
  </Level>
  <br />
  <Divider />
  <br />
  <Card>
    <Versions
      assemblies={Array []}
      attributesFilePath=""
      contentType="module"
      modulePath=""
      onGetProduct={[Function]}
      onGetUrl={[Function]}
      onGetVersion={[Function]}
      productInfo=""
      updateDate={[Function]}
      variant="DEFAULT"
      variantUUID=""
      versionModulePath=""
    />
  </Card>
</Fragment>
`;

exports[`ContentDisplay tests for Module test componentDidMount function 1`] = `undefined`;

exports[`ContentDisplay tests for Module test fetchModuleDetails function 1`] = `Promise {}`;

exports[`ContentDisplay tests for Module test getPortalUrl function 1`] = `undefined`;

exports[`ContentDisplay tests for Module test getProduct function 1`] = `undefined`;

exports[`ContentDisplay tests for Module test getProductInitialLoad function 1`] = `undefined`;

exports[`ContentDisplay tests for Module test getVersion function 1`] = `undefined`;

exports[`ContentDisplay tests for Module test getVersionUUID function 1`] = `undefined`;

exports[`ContentDisplay tests for Module test mouseLeave function 1`] = `undefined`;
